# string-overlap-rs

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: expected.ascii
assets/flag/: background.ascii  foreground.ascii
assets/passing/: foreground.ascii
examples/: overlap.rs  overlap_colored.rs
src/: lib.rs
tests/: overlap.rs  overlap_colored.rs
