[package]
name = "string-overlap"
version = "0.1.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A helper crate for \"layering\" ASCII art"
readme = "README.md"
keywords = ["string", "ascii", "overlap", "layer"]
categories = []
repository = "https://github.com/spenserblack/string-overlap-rs"

[dependencies]
itertools = "0.9"

[dev-dependencies]
pretty_assertions = "0.6"
