[package]
name = "string-overlap"
version = "0.1.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A helper crate for \"layering\" ASCII art"
readme = "README.md"
keywords = ["string", "ascii", "overlap", "layer"]
categories = []
repository = "https://github.com/spenserblack/string-overlap-rs"
exclude = [
    ".github/*",
    ".editorconfig",
    ".gitignore",
    ".travis.yml",
]

[features]
default = ["colored"]
colored = ["colored-crate"]

[dependencies]
itertools = "0.9"

[dependencies.colored-crate]
version = ">= 1.9.2, <= 2"
package = "colored"
optional = true

[dev-dependencies]
indoc = "1"
pretty_assertions = "0.6"

[[example]]
name = "overlap_colored"
required-features = ["colored"]
