[package]
name = "string-overlap"
version = "1.0.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A helper crate for \"layering\" ASCII art"
readme = "README.md"
keywords = ["string", "ascii", "overlap", "layer"]
categories = []
repository = "https://github.com/spenserblack/string-overlap-rs"
exclude = [
    ".github/*",
    ".editorconfig",
    ".gitignore",
    ".travis.yml",
    "CHANGELOG.md",
]

[features]
default = ["colored"]
colored = ["colored-crate", "lazy_static", "regex"]

[dependencies]
itertools = ">=0.2.1"
lazy_static = { version = "1", optional = true }
regex = { version = "1", optional = true }


[dependencies.colored-crate]
version = ">= 1.9.2, <= 2"
package = "colored"
optional = true

[dev-dependencies]
indoc = "1"
pretty_assertions = "1.0"

[[example]]
name = "overlap_colored"
required-features = ["colored"]
